// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attribute converter should return attribute with alias 1`] = `
Object {
  "alias": "alias",
  "displayForm": Object {
    "identifier": Object {
      "id": "label.account.id.name",
      "type": "label",
    },
  },
  "localIdentifier": "a_724874d1_label.account.id.name",
}
`;

exports[`attribute converter should return attribute with empty localId 1`] = `
Object {
  "displayForm": Object {
    "identifier": Object {
      "id": "label.account.id.name",
      "type": "label",
    },
  },
  "localIdentifier": "a_label.account.id.name",
}
`;

exports[`attribute converter should return simple attribute 1`] = `
Object {
  "displayForm": Object {
    "identifier": Object {
      "id": "label.account.id.name",
      "type": "label",
    },
  },
  "localIdentifier": "a_label.account.id.name",
}
`;

exports[`attribute converter should throw an error when toObjQualifier gets an URI ref 1`] = `"Tiger backend does not allow referencing objects by URI."`;
